--- a/Progetto_DACLS/Progetto_DACLS.ioc
+++ b/Progetto_DACLS/Progetto_DACLS.ioc
@@ -16,12 +16,12 @@ I2S2.AudioFreq=AudioFreqCustomValue
 I2S2.AudioFreqCustom=I2Sfreq
 I2S2.CPOL=I2S_CPOL_HIGH
 I2S2.DataFormat=I2S_DATAFORMAT_32B
-I2S2.ErrorAudioFreq=-0.01 %
+I2S2.ErrorAudioFreq=-0.04 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Standard,DataFormat,CPOL,Mode,AudioFreq,AudioFreqCustom
 I2S2.Instance=SPI$Index
 I2S2.Mode=I2S_MODE_MASTER_RX
-I2S2.RealAudioFreq=127.976 KHz
+I2S2.RealAudioFreq=79.963 KHz
 I2S2.Standard=I2S_STANDARD_MSB
 I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
@@ -60,7 +60,7 @@ Mcu.Pin8=PB12
 Mcu.Pin9=PB13
 Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=FclkMEMS,2048000*2;I2Sfreq,FclkMEMS*2/(32*2);I2Sbufflen,(FclkMEMS/1000/16)*2*Framelen;PCMbufflen,(16000/1000)*2*Framelen;PDMbufflen,I2Sbufflen;Framelen,32/2
+Mcu.UserConstants=FclkMEMS,2560000;I2Sfreq,FclkMEMS*2/(32*2);I2Sbufflen,(FclkMEMS/1000/16)*2*Framelen;PCMbufflen,(16000/1000)*2*Framelen;PDMbufflen,I2Sbufflen;Framelen,32/2
 Mcu.UserName=STM32F446RETx
 MxCube.Version=4.25.0
 MxDb.Version=DB.4.0.250
@@ -137,9 +137,9 @@ PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=null
 PDM2PCM.CHANNEL1_bit_order=PDM_FILTER_BIT_ORDER_MSB
-PDM2PCM.CHANNEL1_decimation_factor=PDM_FILTER_DEC_FACTOR_128
+PDM2PCM.CHANNEL1_decimation_factor=PDM_FILTER_DEC_FACTOR_80
 PDM2PCM.CHANNEL1_out_ptr_channels=1
-PDM2PCM.CHANNEL1_output_samples_number=Framelen
+PDM2PCM.CHANNEL1_output_samples_number=32 * Framelen
 PDM2PCM.CHANNEL2_bit_order=PDM_FILTER_BIT_ORDER_MSB
 PDM2PCM.CHANNEL2_out_ptr_channels=1
 PDM2PCM.IPParameters=CHANNEL1_out_ptr_channels,CHANNEL1_output_samples_number,CHANNEL1_decimation_factor,CHANNEL1_bit_order,CHANNEL2_out_ptr_channels,CHANNEL2_bit_order
@@ -177,31 +177,31 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_PDM2PCM_Init-PDM2PCM-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_I2S2_Init-I2S2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
-RCC.AHBFreq_Value=172000000
+RCC.AHBFreq_Value=174000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=43000000
-RCC.APB1TimFreq_Value=86000000
+RCC.APB1Freq_Value=43500000
+RCC.APB1TimFreq_Value=87000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=86000000
-RCC.APB2TimFreq_Value=172000000
+RCC.APB2Freq_Value=87000000
+RCC.APB2TimFreq_Value=174000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=172000000
+RCC.CortexFreq_Value=174000000
 RCC.EthernetFreq_Value=84000000
-RCC.FCLKCortexFreq_Value=172000000
+RCC.FCLKCortexFreq_Value=174000000
 RCC.FLatency-AdvancedSettings=FLASH_LATENCY_5
-RCC.FMPI2C1Freq_Value=43000000
+RCC.FMPI2C1Freq_Value=43500000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=172000000
+RCC.HCLKFreq_Value=174000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2S1CLockSelection=RCC_I2SAPB1CLKSOURCE_PLLR
-RCC.I2S1Freq_Value=172000000
+RCC.I2S1Freq_Value=174000000
 RCC.I2S2Freq_Value=24500000
 RCC.I2SClocksFreq_Value=96000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2S1CLockSelection,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SR,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=172000000
-RCC.PLLCLKFreq_Value=172000000
+RCC.MCO2PinFreq_Value=174000000
+RCC.PLLCLKFreq_Value=174000000
 RCC.PLLI2SM=8
 RCC.PLLI2SN=98
 RCC.PLLI2SPCLKFreq_Value=49000000
@@ -210,28 +210,28 @@ RCC.PLLI2SR=4
 RCC.PLLI2SRCLKFreq_Value=24500000
 RCC.PLLI2SoutputFreq_Value=49000000
 RCC.PLLM=4
-RCC.PLLN=172
-RCC.PLLQCLKFreq_Value=172000000
-RCC.PLLRCLKFreq_Value=172000000
+RCC.PLLN=174
+RCC.PLLQCLKFreq_Value=174000000
+RCC.PLLRCLKFreq_Value=174000000
 RCC.PLLSAIPCLKFreq_Value=48000000
 RCC.PLLSAIQCLKFreq_Value=48000000
 RCC.PLLSAIoutputFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWRFreq_Value=172000000
+RCC.PWRFreq_Value=174000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAIAFreq_Value=48000000
 RCC.SAIBFreq_Value=48000000
-RCC.SDIOFreq_Value=172000000
-RCC.SPDIFRXFreq_Value=172000000
-RCC.SYSCLKFreq_VALUE=172000000
+RCC.SDIOFreq_Value=174000000
+RCC.SPDIFRXFreq_Value=174000000
+RCC.SYSCLKFreq_VALUE=174000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFreq_Value=172000000
+RCC.USBFreq_Value=174000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=98000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=344000000
+RCC.VCOOutputFreq_Value=348000000
 RCC.VCOSAIInputFreq_Value=500000
 RCC.VCOSAIOutputFreq_Value=96000000
 RCC.VcooutputI2S=96000000
@@ -245,7 +245,7 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Period,Pulse-PWM Generation2 CH2
 TIM3.Period=1
 TIM3.Pulse-PWM\ Generation2\ CH2=1
-USART2.BaudRate=1500000
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
