--- a/Progetto_DACLS/Progetto_DACLS.ioc
+++ b/Progetto_DACLS/Progetto_DACLS.ioc
@@ -1,80 +1,58 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI2_RX
+Dma.Request0=USART2_RX
 Dma.RequestsNb=1
-Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_RX.0.Instance=DMA1_Stream3
-Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.0.Mode=DMA_CIRCULAR
-Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.0.Instance=DMA1_Stream5
+Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.0.Mode=DMA_CIRCULAR
+Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-I2S2.AudioFreq=AudioFreqCustomValue
-I2S2.AudioFreqCustom=I2Sfreq
-I2S2.CPOL=I2S_CPOL_HIGH
-I2S2.DataFormat=I2S_DATAFORMAT_32B
-I2S2.ErrorAudioFreq=-0.04 %
-I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Standard,DataFormat,CPOL,Mode,AudioFreq,AudioFreqCustom
-I2S2.Instance=SPI$Index
-I2S2.Mode=I2S_MODE_MASTER_RX
-I2S2.RealAudioFreq=79.963 KHz
-I2S2.Standard=I2S_STANDARD_MSB
-I2S2.VirtualMode=I2S_MODE_MASTER
-KeepUserPlacement=false
+KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=CRC
-Mcu.IP1=DMA
-Mcu.IP2=I2S2
-Mcu.IP3=NVIC
-Mcu.IP4=PDM2PCM
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB15
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=VP_CRC_VS_CRC
-Mcu.Pin17=VP_PDM2PCM_VS_PDM2PCM
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin10=PB3
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PB12
-Mcu.Pin9=PB13
-Mcu.PinsNb=20
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=FclkMEMS,2560000;I2Sfreq,FclkMEMS*2/(32*2);I2Sbufflen,(FclkMEMS/1000/16)*2*Framelen;PCMbufflen,(16000/1000)*2*Framelen;PDMbufflen,I2Sbufflen;Framelen,32/2
+Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=4.25.0
 MxDb.Version=DB.4.0.250
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.DMA1_Stream3_IRQn=true\:6\:0\:true\:false\:true\:false
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SPI2_IRQn=true\:5\:0\:true\:false\:true\:true
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -100,23 +78,11 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [Green Led]
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PB12.Mode=Half_Duplex_Master
-PB12.Signal=I2S2_WS
-PB13.Locked=true
-PB13.Mode=Half_Duplex_Master
-PB13.Signal=I2S2_CK
-PB15.Locked=true
-PB15.Mode=Half_Duplex_Master
-PB15.Signal=I2S2_SD
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
-PB4.Locked=true
-PB4.Signal=S_TIM3_CH1
-PB5.Locked=true
-PB5.Signal=S_TIM3_CH2
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -136,13 +102,6 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=null
-PDM2PCM.CHANNEL1_bit_order=PDM_FILTER_BIT_ORDER_MSB
-PDM2PCM.CHANNEL1_decimation_factor=PDM_FILTER_DEC_FACTOR_80
-PDM2PCM.CHANNEL1_out_ptr_channels=1
-PDM2PCM.CHANNEL1_output_samples_number=32 * Framelen
-PDM2PCM.CHANNEL2_bit_order=PDM_FILTER_BIT_ORDER_MSB
-PDM2PCM.CHANNEL2_out_ptr_channels=1
-PDM2PCM.IPParameters=CHANNEL1_out_ptr_channels,CHANNEL1_output_samples_number,CHANNEL1_decimation_factor,CHANNEL1_bit_order,CHANNEL2_out_ptr_channels,CHANNEL2_bit_order
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -152,14 +111,14 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=3
+ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=C\:/Users/Riccardo/STM32Cube/Repository/STM32Cube_FW_F4_V1.21.0
+ProjectManager.CustomerFirmwarePackage=C\:/Users/Riccardo/STM32Cube/Repository/STM32Cube_FW_F4_V1.19.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.21.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.19.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -175,86 +134,73 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_PDM2PCM_Init-PDM2PCM-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_I2S2_Init-I2S2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
-RCC.AHBFreq_Value=174000000
+RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=43500000
-RCC.APB1TimFreq_Value=87000000
+RCC.APB1Freq_Value=45000000
+RCC.APB1TimFreq_Value=90000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=87000000
-RCC.APB2TimFreq_Value=174000000
+RCC.APB2Freq_Value=90000000
+RCC.APB2TimFreq_Value=180000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=174000000
+RCC.CortexFreq_Value=180000000
 RCC.EthernetFreq_Value=84000000
-RCC.FCLKCortexFreq_Value=174000000
+RCC.FCLKCortexFreq_Value=180000000
 RCC.FLatency-AdvancedSettings=FLASH_LATENCY_5
-RCC.FMPI2C1Freq_Value=43500000
+RCC.FMPI2C1Freq_Value=45000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=174000000
+RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2S1CLockSelection=RCC_I2SAPB1CLKSOURCE_PLLR
-RCC.I2S1Freq_Value=174000000
-RCC.I2S2Freq_Value=24500000
+RCC.I2S1Freq_Value=48000000
+RCC.I2S2Freq_Value=48000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2S1CLockSelection,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SR,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=174000000
-RCC.PLLCLKFreq_Value=174000000
-RCC.PLLI2SM=8
-RCC.PLLI2SN=98
-RCC.PLLI2SPCLKFreq_Value=49000000
-RCC.PLLI2SQCLKFreq_Value=49000000
-RCC.PLLI2SR=4
-RCC.PLLI2SRCLKFreq_Value=24500000
-RCC.PLLI2SoutputFreq_Value=49000000
+RCC.MCO2PinFreq_Value=180000000
+RCC.PLLCLKFreq_Value=180000000
+RCC.PLLI2SPCLKFreq_Value=48000000
+RCC.PLLI2SQCLKFreq_Value=48000000
+RCC.PLLI2SRCLKFreq_Value=48000000
+RCC.PLLI2SoutputFreq_Value=48000000
 RCC.PLLM=4
-RCC.PLLN=174
-RCC.PLLQCLKFreq_Value=174000000
-RCC.PLLRCLKFreq_Value=174000000
+RCC.PLLN=180
+RCC.PLLQCLKFreq_Value=180000000
+RCC.PLLRCLKFreq_Value=180000000
 RCC.PLLSAIPCLKFreq_Value=48000000
 RCC.PLLSAIQCLKFreq_Value=48000000
 RCC.PLLSAIoutputFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWRFreq_Value=174000000
+RCC.PWRFreq_Value=180000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAIAFreq_Value=48000000
 RCC.SAIBFreq_Value=48000000
-RCC.SDIOFreq_Value=174000000
-RCC.SPDIFRXFreq_Value=174000000
-RCC.SYSCLKFreq_VALUE=174000000
+RCC.SDIOFreq_Value=180000000
+RCC.SPDIFRXFreq_Value=180000000
+RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFreq_Value=174000000
-RCC.VCOI2SInputFreq_Value=1000000
-RCC.VCOI2SOutputFreq_Value=98000000
+RCC.USBFreq_Value=180000000
+RCC.VCOI2SInputFreq_Value=500000
+RCC.VCOI2SOutputFreq_Value=96000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=348000000
+RCC.VCOOutputFreq_Value=360000000
 RCC.VCOSAIInputFreq_Value=500000
 RCC.VCOSAIOutputFreq_Value=96000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,TriggerSource_TI1FP1
-SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
-SH.S_TIM3_CH2.ConfNb=1
-TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation2 CH2,Period,Pulse-PWM Generation2 CH2
-TIM3.Period=1
-TIM3.Pulse-PWM\ Generation2\ CH2=1
-USART2.BaudRate=115200
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=59999
+TIM2.Prescaler=29
+USART2.BaudRate=1500000
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
-VP_CRC_VS_CRC.Mode=CRC_Activate
-VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_PDM2PCM_VS_PDM2PCM.Mode=PDM2PCM_Channel
-VP_PDM2PCM_VS_PDM2PCM.Signal=PDM2PCM_VS_PDM2PCM
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
-VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
